@@ -18,7 +18,7 @@ tdmcreate_settings:
             attributes: ' varchar(5)  NOT NULL  DEFAULT ''1.0'' '
         -
             name: set_min_php
-            attributes: ' varchar(5)  NOT NULL  DEFAULT ''5.6'' '
+            attributes: ' varchar(5)  NOT NULL  DEFAULT ''7.0'' '
         -
             name: set_min_xoops
             attributes: ' varchar(8)  NOT NULL  DEFAULT ''2.5.10'' '
